[workspace]
members = [
    "blockbuster",
]
resolver = "2"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[workspace.dependencies]
anchor-lang = "0.29.0"
async-trait = "0.1.60"
borsh = "~0.10.3"
bs58 = "0.4.0"
bytemuck = "1.14.0"
flatbuffers = "23.1.21"
lazy_static = "1.4.0"
log = "0.4.17"
mpl-account-compression = "0.4.2"
mpl-bubblegum = "1.2.0"
mpl-core = "0.9.0"
mpl-noop = "0.2.1"
mpl-token-metadata = "4.1.1"
plerkle_serialization = "1.8.0"
rand = "0.8.5"
serde = "1.0.137"
serde_json = "1.0.81"
solana-client = "~1.18.15"
solana-geyser-plugin-interface = "~1.18.15"
solana-sdk = "~1.18.15"
solana-transaction-status = "~1.18.15"
solana-zk-token-sdk = "~1.18.15"
spl-account-compression = "0.4.2"
spl-concurrent-merkle-tree = "0.4.1"
spl-noop = "0.2.0"
spl-pod = "0.1.0"
spl-token = ">=3.5.0, <5.0"
spl-token-2022 = "1.0"
spl-token-group-interface = "0.1.0"
spl-token-metadata-interface = "0.2.0"
thiserror = "1.0.31"
