[package]
name = "blockbuster"
description = "Metaplex canonical program parsers, for indexing, analytics etc...."
version = "2.3.1"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/blockbuster"
license = "AGPL-3.0"
edition = "2021"
readme = "../README.md"

[dependencies]
anchor-lang = "0.29.0"
async-trait = "0.1.60"
borsh = "~0.10.3"
bs58 = "0.4.0"
bytemuck = {version = "1.14.0", features = ["derive"]}
lazy_static = "1.4.0"
log = "0.4.17"
mpl-account-compression = {version = "0.4.2", features = ["no-entrypoint"]}
mpl-bubblegum = "1.2.0"
mpl-core = {version = "0.8.0-beta.1", features = ["serde"]}
mpl-noop = {version = "0.2.1", features = ["no-entrypoint"]}
mpl-token-metadata = {version = "4.1.1", features = ["serde"]}
serde = "1.0.137"
solana-sdk = "~1.18.15"
solana-transaction-status = "~1.18.15"
solana-zk-token-sdk = "~1.18.15"
spl-account-compression = {version = "0.4.2", features = ["no-entrypoint"]}
spl-noop = {version = "0.2.0", features = ["no-entrypoint"]}
spl-pod = {version = "0.1.0", features = ["serde-traits"]}
spl-token = {version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"]}
spl-token-2022 = {version = "1.0", features = ["no-entrypoint"]}
spl-token-group-interface = "0.1.0"
spl-token-metadata-interface = "0.2.0"
thiserror = "1.0.31"

[dev-dependencies]
flatbuffers = "23.1.21"
plerkle_serialization = "1.8.0"
rand = "0.8.5"
serde_json = "1.0.81"
solana-client = "~1.18.15"
solana-geyser-plugin-interface = "~1.18.15"
spl-concurrent-merkle-tree = "0.4.1"
