[package]
name = "blockbuster"
description = "Metaplex canonical program parsers, for indexing, analytics etc...."
version = "2.4.0"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/blockbuster"
license = "AGPL-3.0"
edition = "2021"
readme = "../README.md"

[dependencies]
bytemuck = { version = "1.18.0", features = ["derive"] }
spl-token-2022 = { version = "1.0", features = ["no-entrypoint"] }

anchor-lang = { version = "0.29.0" }
async-trait = "0.1.60"
borsh = "~0.10.3"
bs58 = "0.4.0"
bytemuck = {version = "1.14.0", features = ["derive"]}
mpl-account-compression = { version = "0.4.2", features = ["no-entrypoint"]}
mpl-bubblegum = { git = "https://github.com/metaplex-foundation/mpl-bubblegum.git", rev = "07678e6", features = ["test-sbf", "serde"] }
mpl-core = {version = "0.9.0", features = ["serde"]}
mpl-noop = { version = "0.2.1", features = ["no-entrypoint"]}
mpl-token-metadata = { version = "4.1.1", features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4.17"
serde = "1.0.140"
solana-sdk = "~1.18.15"
solana-transaction-status = "~1.18.15"
solana-zk-token-sdk = "~1.18.15"
spl-account-compression = { version = "0.4.2", features = ["no-entrypoint"] }
spl-noop = { version = "0.2.0", features = ["no-entrypoint"] }
spl-token = {version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"]}
spl-token-metadata-interface = "0.2.0"
spl-token-group-interface = "0.1.0"
spl-pod = { version = "0.1.0", features = ["serde-traits"] }
triomphe = "=0.1.9"
thiserror = "1.0.31"

[dev-dependencies]
flatbuffers = "23.1.21"
plerkle_serialization = { version = "1.9.0" }
rand = "0.8.5"
serde_json = "1.0.89"
solana-client = "~1.18.15"
solana-geyser-plugin-interface = "~1.18.15"
spl-concurrent-merkle-tree = "0.4.1"
